manifests/inlets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inlets
---
apiVersion: v1
kind: Service
metadata:
  name: inlets
  namespace: inlets
  labels:
    app: inlets
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: inlets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inlets
  namespace: inlets
  labels:
    app: inlets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inlets
  template:
    metadata:
      labels:
        app: inlets
    spec:
      containers:
      - name: inlets
        image: inlets/inlets:2.7.4
        imagePullPolicy: Always
        command: ["inlets"]
        args:
        - "server"
        - "--token-from=/var/inlets/token"
        volumeMounts:
          - name: inlets-token-volume
            mountPath: /var/inlets/
      volumes:
        - name: inlets-token-volume
          secret:
            secretName: inlets
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inlets
  namespace: inlets
spec:
  rules:
  - host: inlets.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: inlets
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home-assistant
  namespace: inlets
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - home.cluster.fun
    secretName: home-assistant-ingress
  rules:
  - host: home.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: inlets
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: downloads-rpc
  namespace: inlets
  labels:
    app: inlets
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: inlets
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vpn-check
  namespace: inlets
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - vpn-check.cluster.fun
    secretName: vpn-check-ingress
  rules:
  - host: vpn-check.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: inlets
          servicePort: 80
